# chatGPT

./: Dockerfile  README.md  config.json  pyproject.toml  requirements.txt
.github/workflows/: pre_production_tests.yml  staging-deploy.yml  test-and-deploy.yml  test-lint.yml
app/: Dockerfile  demo.py  evaluation.py  evaluation_tests.py  preview.py  preview_tests.py  requirements.txt
app/docs/: dev.md  user.md
docs/: user.md
evaluation_function/: dev.py  evaluation.py  evaluation_tests.py  main.py  preview.py  preview_test.py
